<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv"
        android:textColor="#080D47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grocery_list_app"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/pic"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@+id/tv"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:src="@drawable/grocery_pic" />

    <TextView
        android:id="@+id/user"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pic"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:textSize="22sp"
        android:text="@string/username" />

    <EditText

        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pic"
        android:layout_marginStart="15dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/user"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/pass"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/pass"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passWord"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="#FF4400"
        android:padding="5dp"
        android:text="@string/login"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/ftv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>